--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,8 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur minus quia fugiat quae cumque consequatur
         <a href="page2.html">suscipit quidem?</a> Cupiditate, quos debitis recusandae sequi, fugit quis nihil omnis atque inventore consequatur
         soluta?</p>
-    <a href="page2.html" title="Imagen siguiente" class="link-button">Siguiente imagen =&gt;</a>
+    <input type="button" value="Siguiente" onclick="window.location.href='page2.html'" class="link-button">
+</body>
 </body>
 
 </html>
