--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,8 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur minus quia fugiat quae cumque consequatur
         suscipit quidem? Cupiditate, quos debitis recusandae sequi, fugit quis nihil omnis atque inventore consequatur
         soluta?</p>
-    <a href="page1.html" title="Imagen anterior" class="link-button">&lt;= Imagen anterior</a>
+        <input type="button" value="Siguiente" onclick="window.location.href='page2.html'" class="link-button">
+</body>
 </body>
 
 </html>
